--- a/public/templates/auth/register.html
+++ b/public/templates/auth/register.html
@@ -1,8 +1,8 @@
 <div class="container">
     <form class="form-signin" ng-submit="signup()">
-        <h2 class="text-center" translate >Ouvrir un compte.</h2>
-        <h4 class="text-center" translate >Vous avez déjà un compte?</h4>
-        <h4 class="text-center"><a href="" ui-sref="login" translate >Connectez-vous.</a></h4>
+        <h2 class="text-center" translate>Ouvrir un compte.</h2>
+        <h4 class="text-center" translate>Vous avez déjà un compte?</h4>
+        <h4 class="text-center"><a href="" ui-sref="login" translate>Connectez-vous.</a></h4>
         <div class="form-group">
             <input type="text" class="form-control" ng-model="auth.email" placeholder="Adresse email" required/>
         </div>
@@ -13,12 +13,14 @@
             {{message}}
         </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-main  btn-green" translate > ouvrir un compte</button>
+            <button type="submit" class="btn btn-primary btn-main  btn-green" translate> ouvrir un compte</button>
         </div>
-        <p class="small-text" style="margin-top: 15px;text-align: center" translate >
-            En m'inscrivant, j'accepte <a href="" ui-sref="condition" translate >les conditions d'utilisation du service</a>, <a
-                href="" ui-sref="politique-donnees" translate >la politique de protection des données</a> ,
-            et <a href="" ui-sref="politique-cookies" translate >la politique relative aux cookies</a> d'EventMboa et j'accepte de recevoir des communications marketing de la part d'EventMboa.
+        <p class="small-text" style="margin-top: 15px;text-align: center" translate>
+            En m'inscrivant, j'accepte <a href="" ui-sref="condition" translate>les conditions d'utilisation du
+            service</a>, <a
+                href="" ui-sref="politique-donnees" translate>la politique de protection des données</a> ,
+            et <a href="" ui-sref="politique-cookies" translate>la politique relative aux cookies</a> d'EventMboa et
+            j'accepte de recevoir des communications marketing de la part d'EventMboa.
         </p>
     </form>
 
