--- a/public/templates/event/detail-events.html
+++ b/public/templates/event/detail-events.html
@@ -4,9 +4,17 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-message">
-                    <h4 class="date-titre"><ff translate >Le</ff> {{event.date_debut}} <ff translate >à</ff> {{event.adresse.ville}}</h4>
+                    <h4 class="date-titre">
+                        <ff translate>Le</ff>
+                        {{event.date_debut}}
+                        <ff translate>à</ff>
+                        {{event.adresse.ville}}
+                    </h4>
                     <h1>{{event.name}}</h1>
-                    <h4><ff translate >Par</ff> : {{event.organizer.name}} </h4>
+                    <h4>
+                        <ff translate>Par</ff>
+                        : {{event.organizer.name}}
+                    </h4>
                 </div>
             </div>
 
@@ -24,8 +32,10 @@
                         <a href="#" title="Partager"><i class="fa fa-share-alt fa-2x"></i></a>
                     </div>
                     <div class="col-lg-6" style="text-align: right">
-                        <div class="btn-white" translate >{{event.tickets[0].amount}} Fcfa</div>
-                        <button class="btn btn-main btn-green" data-toggle="modal" href="/#inscriptionModal" translate >S'inscrire</button>
+                        <div class="btn-white" translate>{{event.tickets[0].amount}} Fcfa</div>
+                        <button class="btn btn-main btn-green" data-toggle="modal" href="/#inscriptionModal" translate>
+                            S'inscrire
+                        </button>
                     </div>
                 </div>
             </div>
@@ -38,13 +48,13 @@
         <div class="row-fluid">
             <div class="col-lg-8">
                 <dl>
-                    <dt translate >DESCRIPTION</dt>
+                    <dt translate>DESCRIPTION</dt>
                     <dd>
                         <p>{{event.description}}</p>
                     </dd>
                 </dl>
                 <dl>
-                    <dt translate >TAGS</dt>
+                    <dt translate>TAGS</dt>
                     <dd>
                         <section>
                             <span>
@@ -60,12 +70,12 @@
 
             <div class="col-lg-4">
                 <dl>
-                    <dt translate >DATE ET HEURE</dt>
+                    <dt translate>DATE ET HEURE</dt>
                     <dd>du <strong>{{event.date_debut}}</strong> au <strong>{{event.date_fin}}</strong></dd>
                 </dl>
 
                 <dl>
-                    <dt translate >ADRESSE</dt>
+                    <dt translate>ADRESSE</dt>
                     <dd>{{event.adresse.boite_postale}} {{event.adresse.adresse}}</dd>
                     <dd>{{event.adresse.rue}}</dd>
                     <dd>{{event.town.name}}</dd>
@@ -83,7 +93,9 @@
                 <div class="text-center">
                     <div class="divider"></div>
                     <h3 class="bold">{{event.organizer.name}}</h3>
-                    <div><ff translate >Organisateur de</ff> <strong>{{event.name}}</strong></div>
+                    <div>
+                        <ff translate>Organisateur de</ff>
+                        <strong>{{event.name}}</strong></div>
                     <div class="image">
                         <img src="{{event.organizer.image}}" alt="" title="{{event.organizer.name}}"/>
                     </div>
@@ -91,8 +103,12 @@
                         {{event.organizer.description}}
                     </p>
                     <p class="option">
-                        <a ui-sref="profil{{event.organizer.name}}"><i class="fa fa-navicon"></i> <ff translate >Profil</ff></a>
-                        <a ui-sref="contact-organisateur{{event.organisateur.email}}"><i class="fa fa-envelope-o"></i> <ff translate >Contactez</ff></a>
+                        <a ui-sref="profil{{event.organizer.name}}"><i class="fa fa-navicon"></i>
+                            <ff translate>Profil</ff>
+                        </a>
+                        <a ui-sref="contact-organisateur{{event.organisateur.email}}"><i class="fa fa-envelope-o"></i>
+                            <ff translate>Contactez</ff>
+                        </a>
                     </p>
                 </div>
             </div>
@@ -120,11 +136,13 @@
                 <div class="select">
                     <div class="row">
                         <div class="col-lg-9">
-                            <ff translate >{{event.tickets[0].name}}</ff> <br/>
+                            <ff translate>{{event.tickets[0].name}}</ff>
+                            <br/>
                             <span class="text-uppercase">{{event.tickets[0].amount}} Fcfa</span>
                         </div>
                         <div class="col-lg-3">
-                            <input type="number" min="1" max="{{event.tickets[0].max_command}}" ng-model="qte" class="form-control"/>
+                            <input type="number" min="1" max="{{event.tickets[0].max_command}}" ng-model="qte"
+                                   class="form-control"/>
                         </div>
                     </div>
                 </div>
@@ -132,7 +150,10 @@
             <div class="modal-footer left">
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="btn-white"><ff translate >Qté</ff> : {{qte}}</div>
+                        <div class="btn-white">
+                            <ff translate>Qté</ff>
+                            : {{qte}}
+                        </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="btn-white">{{event.tickets[0].amount*qte}} Fcfa</div>
