--- a/public/templates/user/contact.html
+++ b/public/templates/user/contact.html
@@ -2,10 +2,11 @@
     <div class="container">
         <div class="row" style="margin-top: 30px">
             <div class="col-lg-8 col-sm-8 col-md-8">
-                <h1 translate >Contacts</h1>
+                <h1 translate>Contacts</h1>
             </div>
             <div class="col-lg-4" style="margin-top: 25px" ng-if="contacts.length>0">
-                <button class="btn btn-main" data-toggle="modal" href="/#contactModal" translate >Ajouter contact</button>
+                <button class="btn btn-main" data-toggle="modal" href="/#contactModal" translate>Ajouter contact
+                </button>
             </div>
         </div>
         <div class="row">
@@ -22,10 +23,10 @@
                 <div class="clearfix"></div>
                 <table class="table text-capitalize" ng-if="contacts.length>0">
                     <thead>
-                        <th translate >Nom</th>
-                        <th translate >Prénom</th>
-                        <th translate >Email</th>
-                        <th translate >Actions</th>
+                    <th translate>Nom</th>
+                    <th translate>Prénom</th>
+                    <th translate>Email</th>
+                    <th translate>Actions</th>
                     </thead>
                     <tbody>
                         <tr ng-repeat="c in contacts|orderBy:'-nom':true|filter:searchKey">
@@ -46,12 +47,14 @@
                 <div class="" ng-if="contacts.length==0">
                     <img src="images/contact_people_14393.png" style="width: 20%!important; text-align: center" alt=""/>
 
-                    <h4 class="bold" translate >Gérer tous vos contacts au même endroit</h4>
-                    <p translate >
+                    <h4 class="bold" translate>Gérer tous vos contacts au même endroit</h4>
+                    <p translate>
                         Ajoutez et importez facilement des adresses électroniques à partir de votre boîte Gmail, Outlook, ou d'autres fichiers.
                         Envoyez et suivez les invitations pour promouvoir votre événement.
                     </p>
-                    <button class="btn btn-main" data-toggle="modal" href="/#contactModal" translate >Ajouter des contacts</button>
+                    <button class="btn btn-main" data-toggle="modal" href="/#contactModal" translate>Ajouter des
+                        contacts
+                    </button>
                 </div>
             </div>
 
@@ -63,9 +66,9 @@
                                          src="images/G_is_For_Google_New_Logo_Thumb.png"></a>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading bold" translate >Google</h4>
-                        <p class="small-text" translate >Importez vos contacts google.</p>
-                        <span class="requis small" translate > Bientôt disponible.</span>
+                        <h4 class="media-heading bold" translate>Google</h4>
+                        <p class="small-text" translate>Importez vos contacts google.</p>
+                        <span class="requis small" translate> Bientôt disponible.</span>
                     </div>
                 </div>
             </div>
@@ -83,16 +86,17 @@
             <div class="modal-body" style="background: #F8F8FA">
                 <div class="row">
                     <div class="col-lg-12">
-                        <ff translate >Saisissez l'e-mail, le prénom, le nom de famille en les séparant par des virgules.
-                            Chaque nouveau contact doit être séparé par un point-virgule</ff>
+                        <ff translate>Saisissez l'e-mail, le prénom, le nom de famille en les séparant par des virgules.
+                            Chaque nouveau contact doit être séparé par un point-virgule
+                        </ff>
 
                         <textarea ng-model="contact" placeholder="johndoe@gmail.com,John,Doe" class="form-control"></textarea>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-main" type="submit" translate >Enregistrer</button>
-                <button id="close" class="btn btn-main hide" data-dismiss="modal" translate >Fermer</button>
+                <button class="btn btn-main" type="submit" translate>Enregistrer</button>
+                <button id="close" class="btn btn-main hide" data-dismiss="modal" translate>Fermer</button>
             </div>
         </form><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
